Replaced AppBar to CurvedNavigationBar
fixes #4

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   table_calendar: ^2.3.0
   percent_indicator: "^2.1.7+2"
+  curved_navigation_bar: ^0.3.4
+  
 
 
 
