--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   rflutter_alert: ^1.1.0
   cloud_firestore: ^0.14.0+2
   firebase_auth: ^0.18.0+1
+  firebase_core: ^0.5.0+9
+  firebase_analytics: ^5.0.2
+  google_sign_in: ^4.5.6
+  flutter_auth_buttons: ^0.10.0
   provider: ^4.3.2+2
 
 
